--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>task 2</li>
         <li>task 3</li>
     </ul>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloribus tenetur, debitis, distinctio quaerat asperiores repellat quo reiciendis, aut ea tempore ab. Ratione voluptatibus cupiditate laboriosam omnis doloribus dolorum. Vel.</p>
     
 </body>
 </html>
