--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>task 3 edited</li>
         <li>task 4</li>
     </ul>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloribus tenetur, debitis, distinctio quaerat asperiores repellat quo reiciendis, aut ea tempore ab. Ratione voluptatibus cupiditate laboriosam omnis doloribus dolorum. Vel.</p>
+    <p><strong> ipsum dolor sit amet consectetur adipisicing elit. Ipsa doloribus tenetur, debitis,</strong> distinctio quaerat asperiores repellat quo reiciendis, aut ea tempore ab. Ratione voluptatibus cupiditate laboriosam omnis doloribus dolorum. Vel.</p>
     
 </body>
 </html>
