--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>task 2</li>
         <li>task 4</li>
         <li>task 5</li>
+        <li>task 6</li>
     </ul>
     <p><strong> <i>ipsum dolor</i> sit amet consectetur adipisicing elit. Ipsa doloribus tenetur, debitis,</strong> distinctio quaerat asperiores repellat quo reiciendis, aut ea tempore ab. Ratione voluptatibus cupiditate laboriosam omnis doloribus dolorum. Vel.</p>
     
